tensorflow/1.10/api_docs/python/tf/contrib/framework/model_variable.md
<div itemscope itemtype="http://developers.google.com/ReferenceObject">
<meta itemprop="name" content="tf.contrib.framework.model_variable" />
</div>

# tf.contrib.framework.model_variable

``` python
tf.contrib.framework.model_variable(
    name,
    shape=None,
    dtype=tf.float32,
    initializer=None,
    regularizer=None,
    trainable=True,
    collections=None,
    caching_device=None,
    device=None,
    partitioner=None,
    custom_getter=None,
    use_resource=None
)
```



Defined in [`tensorflow/contrib/framework/python/ops/variables.py`](https://www.tensorflow.org/code/tensorflow/contrib/framework/python/ops/variables.py).

See the guide: [Framework (contrib) > Variables](../../../../../api_guides/python/contrib.framework.md#Variables)

Gets an existing model variable with these parameters or creates a new one.

#### Args:

* <b>`name`</b>: the name of the new or existing variable.
* <b>`shape`</b>: shape of the new or existing variable.
* <b>`dtype`</b>: type of the new or existing variable (defaults to `DT_FLOAT`).
* <b>`initializer`</b>: initializer for the variable if one is created.
* <b>`regularizer`</b>: a (Tensor -> Tensor or None) function; the result of
      applying it on a newly created variable will be added to the collection
      GraphKeys.REGULARIZATION_LOSSES and can be used for regularization.
* <b>`trainable`</b>: If `True` also add the variable to the graph collection
    `GraphKeys.TRAINABLE_VARIABLES` (see <a href="../../../tf/Variable.md"><code>tf.Variable</code></a>).
* <b>`collections`</b>: A list of collection names to which the Variable will be added.
    Note that the variable is always also added to the
    `GraphKeys.GLOBAL_VARIABLES` and `GraphKeys.MODEL_VARIABLES` collections.
* <b>`caching_device`</b>: Optional device string or function describing where the
      Variable should be cached for reading.  Defaults to the Variable's
      device.
* <b>`device`</b>: Optional device to place the variable. It can be an string or a
    function that is called to get the device for the variable.
* <b>`partitioner`</b>: Optional callable that accepts a fully defined `TensorShape`
    and dtype of the `Variable` to be created, and returns a list of
    partitions for each axis (currently only one axis can be partitioned).
* <b>`custom_getter`</b>: Callable that allows overwriting the internal
    get_variable method and has to have the same signature.
* <b>`use_resource`</b>: If `True` use a ResourceVariable instead of a Variable.


#### Returns:

The created or existing variable.